kubernetes/ingress/ingress.txt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://oauth.$dnsa.$env.austrianopencloudcommunity.org/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.$dnsa.$env.austrianopencloudcommunity.org/oauth2/auth
    ingress.kubernetes.io/whitelist-source-range: $ip_whitelist_range
  name: ingress-$pacman
  namespace: $pacman
spec:
  ingressClassName: nginx
  rules:
  - host: $pacman.$dnsa.$env.austrianopencloudcommunity.org
    http:
      paths:
      - backend:
          service:
            name: pacman
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - $pacman.$dnsa.$env.austrianopencloudcommunity.org    
    secretName: $pacman-ingress-tls
